tests/ui/borrowck/reassignment_immutable_fields.stderr
error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/reassignment_immutable_fields.rs:7:5
   |
LL |     x.0 = 1;
   |     ^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `x` isn't fully initialized
  --> $DIR/reassignment_immutable_fields.rs:7:5
   |
LL |     let x: (u32, u32);
   |         - binding declared here but left uninitialized
LL |     x.0 = 1;
   |     ^^^^^^^ `x` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/reassignment_immutable_fields.rs:16:5
   |
LL |     x.0 = 1;
   |     ^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `x` isn't fully initialized
  --> $DIR/reassignment_immutable_fields.rs:16:5
   |
LL |     let x: (u32, u32);
   |         - binding declared here but left uninitialized
LL |     x.0 = 1;
   |     ^^^^^^^ `x` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0381, E0658.
For more information about an error, try `rustc --explain E0381`.
